/*
 *
 *    Copyright (c) 2019-2020 Google LLC.
 *    Copyright (c) 2016-2018 Nest Labs, Inc.
 *    All rights reserved.
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

/**
 *    @file
 *      This file defines Weave Data Language (WDL) event priorities and
 *      schema access controls, privileges, and variability qualities.
 *
 */

syntax = "proto3";
package wdl;

option java_outer_classname = "WdlInternalDataAccess";
option objc_class_prefix = "SCM";

/**
 * @brief 
 *   The importance of an event.
 *
 * @detail
 * Importance is a qualitative determination of the criticality
 * that a particular event be eventually delivered. It indicates
 * the customer impact of losing an event and is therefore used
 * for Quality of Service design considerations.
 *
 */

enum EventImportance {

  EVENT_IMPORTANCE_UNSPECIFIED = 0; /// Should never be set, indicates the field is missing

  /**
   * Production Critical importance denotes events whose loss would have
   * significant impact on critical customer-facing features. They are the
   * highest importance/priority and should be used sparingly and with consideration
   * of product constraints like power and memory. 
   */
  EVENT_IMPORTANCE_PRODUCTION_CRITICAL = 1;

  /**
   * Production Standard importance denotes events whose loss would
   * have direct impact on customer-facing features.
   */
  EVENT_IMPORTANCE_PRODUCTION_STANDARD = 2;

  /**  
   * Info importance denotes events that provide extra insight
   * and diagnostics into the running system, but whose loss would
   * not directly impact customer-facing features.
   */
  EVENT_IMPORTANCE_INFO = 3;

  /**
   * Debug importance denotes events of interest to the developers
   * of the system whose loss would not directly affect customers
   * or business
   */
  EVENT_IMPORTANCE_DEBUG = 4;
}

enum Privilege {
  PRIV_ANY = 0;
  PRIV_ADVANCED = 1;
  PRIV_ADMIN = 2;
  PRIV_SERVICE = 3;
}

enum Variability {
  DYNAMIC    = 0;  /// Values can update at any time
  STATIC     = 1;  /// Values can never update
}

enum WriteAccess {
  READ_WRITE = 0;	 /// Full write access
  READ_ONLY  = 1;	 /// This cannot be written
}
